# opensource

./: .gitignore  CMakeLists.txt  CNAME  Readme.md  Version.cmake  inc_ver.sh  oss.hash
libs/libgpcifro/: CMakeLists.txt
libs/libgpcifro/doc/: Doxyfile  html_header  mainpage.doxy
libs/libgpcifro/inc/: gp-cifroarea.h  gp-cifrocurve.h  gp-cifrocustom.h  gp-cifroimage.h  gp-cifroscope.h  gp-icacurve.h  gp-icacustom.h  gp-icarenderer.h  gp-icascope.h  gp-icastaterenderer.h
libs/libgpcifro/src/gpcifroarea/: CMakeLists.txt  cairosdline.c  cairosdline.h  gp-cifroarea.c  gp-cifrocurve.c  gp-cifrocustom.c  gp-cifroscope.c  gp-icacurve.c  gp-icacustom.c  gp-icarenderer.c  gp-icascope.c  gp-icastaterenderer.c  icaaxis.c  icaaxis.h
libs/libgpcifro/src/test/: CMakeLists.txt  cifrocurvetest.c  cifroscopetest.c  cifrotest.c  dummyrenderer.c  dummyrenderer.h
libs/libgpcore/: CMakeLists.txt  Makefile
libs/libgpcore/po/: libgpcore.pot  ru.po
libs/libgpcore/src/core/: ActivityFunc.vala  Bookmark.vala  CMakeLists.txt  Chunk.vala  Dispatcher.vala  Dumper.vala  FileUtils.vala  Filter.vala  GeoConst.vala  GrowingArea.vala  Ladle.vala  MemTile.vala  Point.vala  Rumorista.vala  StackFilter.vala  Tile.vala  Trunk.vala  Worker.vala
libs/libgpcore/src/gui/: ActivityButton.vala  Barista.vala  CMakeLists.txt  Cairo.vala  CellRendererStar.vala  Connector.vala  Dialog.vala  InactiveForm.vala  MenuTree.vala  Nagiev.vala  Palette.vala  Prefable.vala  ScreenDoctor.vala  StackFilterBox.vala  TreeExport.vala  ViewPort.vala
libs/libgpcore/src/test/: CMakeLists.txt  activity_button_test.c  chunk_test.c  cp.vala  dispatcher_test.vala  draw_background_test.vala  dumper_test.c  filenames_sort.c  guicp.vala  landle_client.vala  landle_server.vala  magnetic_declination.vala  magnetic_model.c  magnetic_model_and_geo_point.h  magnetic_model_and_geo_point.vapi  menu_tree_test.c  palette_test.c  rmrf.vala  rumorista_test.c  screen_doctor.c  spinner.c  treeview_liststore.vala  trunk_test.c  window_present_test.c
libs/libgpnein/: CMakeLists.txt  Makefile
libs/libgpnein/inc/: gp-nein.h
libs/libgpnein/src/nein/: CMakeLists.txt  nein.c
libs/libgpnein/src/test/: CMakeLists.txt  nein_test.vala
libs/libgpqtrunner/: CMakeLists.txt  Makefile
libs/libgpqtrunner/inc/: gp-qtrunner.h
libs/libgpqtrunner/src/gpqtrunner/: CMakeLists.txt  gp-qtrunner.cpp
libs/libgprpc/: CMakeLists.txt  Makefile
libs/libgprpc/doc/: Doxyfile  mainpage.doxy
libs/libgprpc/inc/: gp-rpc-auth-cram-server.h  gp-rpc-auth-cram.h  gp-rpc-auth.h  gp-rpc-common.h  gp-rpc-data.h  gp-rpc-manager.h  gp-rpc-server.h  gp-rpc.h  srpc-server.h  srpc.h  trpc-server.h  trpc.h  urpc-server.h  urpc.h
libs/libgprpc/po/: libgprpc.pot  ru.po
libs/libgprpc/src/gprpc/: CMakeLists.txt  gp-rpc-auth-cram-common.h  gp-rpc-auth-cram-server.c  gp-rpc-auth-cram.c  gp-rpc-auth.c  gp-rpc-common.c  gp-rpc-data.c  gp-rpc-manager.c  gp-rpc-server.c  gp-rpc.c  srpc-common.c  srpc-common.h  srpc-server.c  srpc.c  trpc-server.c  trpc.c  urpc-server.c  urpc.c
libs/libgprpc/src/test/: CMakeLists.txt  auth-test.c  data-test.c  grpc-test.c  manager-test.c
libs/libgpsmartcache/: CMakeLists.txt  Makefile
libs/libgpsmartcache/doc/: Doxyfile  html_header  mainpage.doxy
libs/libgpsmartcache/inc/: gp-smartcache.h
libs/libgpsmartcache/po/: libgpsmartcache.pot  ru.po
libs/libgpsmartcache/src/gpsmartcache/: CMakeLists.txt  gp-smartcache.c  sysinfo.c
libs/libgpsmartcache/src/test/: CMakeLists.txt  gsmartcachetest.c  sysinfo.c  vala_test.vala
libs/libgpstapler/: CMakeLists.txt  Makefile
libs/libgpstapler/doc/: Doxyfile  html_header  mainpage.doxy
libs/libgpstapler/inc/: gp-getup.h  gp-stapler.h  gp-streamer.h  gp-tile-viewer.h
libs/libgpstapler/src/gpstapler/: AsyncTiler.vala  CMakeLists.txt  MixTiler.vala  Tasks.vala  Tiler.vala  gp-getup.c  gp-stapler.c  gp-streamer.c  gp-tile-viewer.c  layer.c  layer.h
libs/libgpstapler/src/test/: CMakeLists.txt  duller.c  duller.h  muddy.c  muddy.h  pixmantest.c  staplertest.c  treeview_dnd_test.c  treeview_dnd_test2.c  viewertestduller.c  weigher.c  weigher.h
libs/libgptrace/: CMakeLists.txt  Makefile
libs/libgptrace/doc/: Doxyfile  html_header
libs/libgptrace/inc/: gp-trace.h
libs/libgptrace/src/gptrace/: CMakeLists.txt  gp-trace.c
libs/libgptrace/src/test/: CMakeLists.txt  gtrace-test.c
misc/bash_ini_parser/test/: gis_config_test.sh
misc/cmake/: RPath.cmake  aquadb.txt  arch.cmake  camel_to_lower.cmake  embed_build.cmake  export_all_symbols.txt  gdal.cmake  gio-unix.txt  glib2.txt  grpc.txt  gssdp.txt  gstfft.txt  gtk2.txt  gtk3.txt  gtrace.txt  libfftw3.txt  libgeotiff.txt  libgps.cmake  libserialport.cmake  libtcc.txt  libtiff.txt  libxml2.txt  main.txt  msvc-libs.txt  no_win32_console.txt  opengl.txt  openmp.txt  pulse_simple.cmake  require_library.txt  soup.cmake  sqlite3.cmake  uuid.txt
misc/cmake/elementary/: FindVala.cmake  FindValadoc.cmake  FindVapiGen.cmake  Translations.cmake  ValaPrecompile.cmake
misc/cmake/firtree/: UseGtkDoc.cmake
misc/cmake/gresources/: BuildTargetScript.cmake
misc/cmake/poppler/: FindGObjectIntrospection.cmake  GObjectIntrospectionMacros.cmake
misc/hooks/: commit-msg
utils/float2hex/: CMakeLists.txt  Makefile  float2hex.c
utils/gopnik/: Makefile  config.h  error.h  gopnik.c
utils/poller/: Makefile  gio_poller.vala  poller.c  recursive_gio_poller.vala
vapi/: DPMS.vapi  dualit.vapi  fftw.vapi  geotiff.vapi  gl.vapi  gtkglext-1.0.vapi  libgps-2.vapi  libgps.vapi  libserialport.vapi  map.vapi  xml-backports.vapi
vapi/gdal/: gdal.vapi  ogr.vapi  osr.vapi
vapi/pulse/: libpulse-simple.vapi
